<resources>
    <string name="app_name">Let\'s go</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Let\'s Go</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">Let\'s Go</string>
    <string name="dummy_content">Lets\nGO</string>
    <string name="action_sign_out">Sign out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="fragment_title_start">Start</string>
    <string name="fragment_title_itnerary">Itnerary</string>
    <string name="fragment_title_message">Message</string>
    <string name="fragment_title_contact">Contact</string>
    <string name="no_itinerary">No Itinerary</string>
</resources>
