<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior=".FooterBehavior"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_rb_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_start"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/fragment_title_start"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_rb_itinerary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_start"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/fragment_title_itnerary"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_rb_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_start"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/fragment_title_message"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/tab_rb_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_start"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/fragment_title_contact"
            android:textColor="@color/tab_selector_tv_color" />
    </RadioGroup>
</android.support.design.widget.CoordinatorLayout>
